修复某些型号拿不到的问题
Signed-off-by: yuxianhan <yuxianhan1@jd.com>

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//JDSpider/items.py=utf-8
 encoding//JDSpider/middlewares.py=utf-8
+encoding//JDSpider/pipelines.py=utf-8
 encoding//JDSpider/settings.py=utf-8
 encoding//JDSpider/spiders/JDSpider.py=utf-8
 encoding//JDSpider/spiders/items.py=utf-8
+encoding//JDSpider/spiders/test.py=utf-8
